2004-03-26  Georg Baum  <Georg.Baum@post.rwth-aachen.de>

	* text.C (parse_text): handle vspaces like '1cm' correctly

2004-02-01  Lars Gullik Bjonnes  <larsbj@gullik.net>

	* text.C (parse_box): "\\" -> '\\' in calls to contains.

2004-01-07  Lars Gullik Bjonnes  <larsbj@gullik.net>

	* text.C: reorder the using statements.
	(translate_len): remove usage of a uninitialized variable.
	(isLayout): make it adaptable and constify operator()
	(findLayout): reformat slightly and dont use the same var for
	different things.

2004-01-06  Georg Baum  <Georg.Baum@post.rwth-aachen.de>

	* text.C: fix status tag output for ERT inset

2003-12-17  Georg Baum  <Georg.Baum@post.rwth-aachen.de>

	* preamble.C: Change file format from 225 to 228
	* text.C: Convert minipages and parboxes to box insets
	* text.C: Changes for format 228 (see ../../development/FORMAT)
	* text.C: Add lyxgreyedout environment
	* context.[Ch]: New function Context::add_extra_stuff()

2003-12-08  Georg Baum  <Georg.Baum@post.rwth-aachen.de>

	* text.C: Use the new VSpace inset (fixes a bug with added_space top)
	* text.C: Fix \= in tabbing env again
	* text.C: Fix invocation of parse_command()

2003-11-18  Georg Baum  <Georg.Baum@post.rwth-aachen.de>

	* tex2lyx.C:
	* tex2lyx.h:
	* text.C: Read a list of commands and their arguments from a reLyX
	compatible syntax file in order to parse optional argumnts correctly.
	* preamble.C:
	* table.C:
	* text.C:
	* tex2lyx.C:
	* texparser.C
	* math.C: change size() to !empty() where it was used as bool

2003-11-03  Georg Baum  <Georg.Baum@post.rwth-aachen.de>

	* math.C:
	* table.C:
	* text.C:
	* context.[Ch]: New functions Context::set_item(),
	Context::new_paragraph(ostream & os) and Context::atParagraphStart()
	to make Context usage more explicit
	* texparser.[Ch]: Rework Parser::tokenize (see comment in texparser.h)
	* table.C:
	* math.C:
	* texparser.C: Don't silently drop comments
	* texparser.C: Token::asInput() does not append a space anymore